overflow + horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -5,12 +5,21 @@
   box-sizing: border-box;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 html {
   scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 body {
+  min-height: 100%;
   background: linear-gradient(135deg, #2a2a2a, #2a2a2a);
   color: white;
+  overflow-x: hidden;
 }
 
 #header {
@@ -22,6 +31,8 @@ body {
 }
 
 .container {
+  max-width: 1400px;
+  margin: 0 auto;
   padding: 10px 10%;
 }
 
@@ -138,7 +149,7 @@ nav ul li a:hover::after {
 }
 
 .about-col-2 {
-  flex-basis: 100%;
+  flex-basis: 60%;
 }
 
 .sub-title {
